// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SearchCard /> > renders correctly 1`] = `
<div
  aria-label="Test user"
  tabindex="-1"
>
  <img
    alt="Test profile picture"
    src="mockedDataURL"
  />
  <span>
    Test
  </span>
</div>
`;

exports[`<SearchCard /> > renders default profile page on no profile picture 1`] = `
<div
  aria-label="NoPictureTest user"
  tabindex="-1"
>
  <img
    alt="NoPictureTest profile picture"
    src="/src/assets/default-profile-picture.jpeg"
  />
  <span>
    NoPictureTest
  </span>
</div>
`;

exports[`<SearchCard /> > renders default profile picture before fetch is resolved 1`] = `
<div
  aria-label="Test user"
  tabindex="-1"
>
  <img
    alt="Test profile picture"
    src="/src/assets/default-profile-picture.jpeg"
  />
  <span>
    Test
  </span>
</div>
`;

exports[`<SearchCard /> > renders default profile picture if request failed 1`] = `[TypeError: Failed to fetch]`;

exports[`<SearchCard /> > renders default profile picture if request failed 2`] = `
<div
  aria-label="Test user"
  tabindex="-1"
>
  <img
    alt="Test profile picture"
    src="/src/assets/default-profile-picture.jpeg"
  />
  <span>
    Test
  </span>
</div>
`;
